# fastapi-sample

./: README.md  pyproject.toml
src/fastapi_sample/: main.py
