[tool.poetry]
name = "fastapi-sample"
version = "0.1.0"
description = ""
authors = ["t_ishikawa <tissi0708@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.49.0"
hypercorn = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
